fabric/testdata/out/ing_spp-orchestrator-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"spp-orchestrator","controller-uid":"dc9807f1-0b50-4f99-a39c-f5d5c06b7898","deployment-id":"d-2bo4qiirv1ued8q7ebradue32g","pipeline-id":"l-efn499u5h9xkb6bbh4eev4ytp"},"name":"spp-orchestrator-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"spp-orchestrator.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-orchestrator","servicePort":"http"},"pathType":"Imple [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-02-22T15:58:38Z"
  generation: 1
  labels:
    application: spp-orchestrator
    controller-uid: dc9807f1-0b50-4f99-a39c-f5d5c06b7898
    deployment-id: d-2bo4qiirv1ued8q7ebradue32g
    pipeline-id: l-efn499u5h9xkb6bbh4eev4ytp
  name: spp-orchestrator-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-orchestrator
    uid: dc9807f1-0b50-4f99-a39c-f5d5c06b7898
  resourceVersion: "1357489174"
  uid: 6861ed41-4ae1-4ba1-b150-5f6e805cfe95
spec:
  rules:
  - host: spp-orchestrator.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-orchestrator
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-orchestrator-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-orchestrator
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
